--- a/index.html
+++ b/index.html
@@ -10,16 +10,25 @@
     <style>
         .header {
             margin: 0 auto;
-            padding-top: 15px;
-            padding-bottom: 15px;
-            line-height: 2;
-            text-align: center;
+            /*padding-top: 10px;*/
+            /*padding-bottom: 10px;*/
+            /*line-height: 2;*/
             /*background: linear-gradient(#0099FF, #00CCFF, #FFFFFF);*/
             background: #0099FF;
         }
         .header h1 {
+            height: 100px;
+            line-height: 100px;
+            text-align: center;
+            font-size: 24px;
             font-weight: 100;
             color: #ffffff;
+        }
+        .header img {
+            /*float: left;*/
+            position: inherit;
+            margin: -12px 10px -12px 0;
+            width: 45px;
         }
         .weui-grid__icon {
             width: 50px;
@@ -30,8 +39,10 @@
 <body ontouchstart="">
 <!-- 使用 -->
 <!--<a href="javascript:;" class="weui-btn weui-btn_primary">绿色按钮</a>-->
+
 <div class="header">
-    <h1>查询中心</h1>
+
+    <h1><img src="images/icon.png" alt="">查询中心 Query Center</h1>
 </div>
 <div class="weui-grids">
     <a href="http://mp.weixin.qq.com/s?__biz=MzA4NzIwNjIzMg==&mid=204435051&idx=2&sn=16e8c91bf0c48e82c81e71413f8c3697#wechat_redirect" class="weui-grid">
@@ -96,6 +107,14 @@
         </div>
         <p class="weui-grid__label">
             课程查询
+        </p>
+    </a>
+    <a href="http://m.kuaidi100.com/?from=openv" class="weui-grid">
+        <div class="weui-grid__icon">
+            <img src="./images/icon_package.png" alt="">
+        </div>
+        <p class="weui-grid__label">
+            快递查询
         </p>
     </a>
 </div>
